force-app/main/default/objects/BuxIn__c/BuxIn__c.object-meta.xml
<CustomObject>
    <label>BuxIn</label>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>BuxIn Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BuxIns</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>