force-app/main/default/objects/BuxIn__c/fields/Im_Special__c.field-meta.xml
<CustomField>
    <fullName>Im_Special__c</fullName>
    <defaultValue>0+0</defaultValue>
    <label>Dude, I&#39;m Just Special</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>