force-app/main/default/objects/BuxIn__c/fields/Working_Hard__c.field-meta.xml
<CustomField>
    <fullName>Working_Hard__c</fullName>
    <defaultValue>0+0</defaultValue>
    <label>Dude, I&#39;m Working Hard</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>