force-app/main/default/objects/BuxIn__c/listViews/Bux_In_List_View.listView-meta.xml
<ListView>
    <fullName>Bux_In_List_View</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Working_Hard__c</columns>
    <columns>Im_Special__c</columns>
    <columns>Memo__c</columns>
    <filterScope>Mine</filterScope>
    <label>Bux In List View</label>
</ListView>